2010-01-06  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* version.sh: GraphicsMagick 1.2.10 released.

	* NEWS.txt: Update news for release.

	* coders/jp2.c: Backport from CVS HEAD version.

2010-01-05  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/version.h.in: Added MagickLibInterfaceNewest and
	MagickLibInterfaceOldest preprocessor defines so that applications
	may easily test for library versions while compiling.

2009-12-04  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* configure.ac: Define _GNU_SOURCE and _NETBSD_SOURCE so that
	pwrite() and pread() prototypes are available under GNU Linux and
	NetBSD.

	* magick/render.c (TracePath): Fix access one beyond the end of
	the points array.

2009-11-30  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/enhance.c (GammaImage): Should return success status
	rather than an error status when there is no work to do.

	* magick/gem.c (GetOptimalKernelWidth1D, GetOptimalKernelWidth1D):
	In the Q32 build, convolution kernel size was estimated
	incorrectly for large sigmas on 32-bit systems due to arithmetic
	overflow.

2009-11-21  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* configure: Update to Autoconf 2.65.

2009-11-20  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/attribute.c (GenerateIPTCAttribute): Returned IPTC string
	values were one character too short.

2009-11-16  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* ltdl/ltdl.c: Update libltdl to 2.2.6b in order to fix security
	issue.  Resolves CVE-2009-3736 as it pertains to GraphicsMagick.

2009-11-02  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/command.c (MogrifyImageCommand): Convolve does not accept
	an argument which looks like a geometry.  Resolves SourceForge
	issue #2890923 "Different handling of -convolve between convert
	and mogrify".

	* coders/mpc.c (ReadMPCImage): is_monochrome and is_grayscale
	flags were not managed properly for the MPC coder.
