@@ -28,6 +28,7 @@ extern ModuleExport void
   RegisterCMYKImage(void),
   RegisterCUTImage(void),
   RegisterDCMImage(void),
+  RegisterDCRAWImage(void),
   RegisterDCXImage(void),
   RegisterDIBImage(void),
   RegisterDPSImage(void),
@@ -159,6 +160,7 @@ extern ModuleExport void
   UnregisterCMYKImage(void),
   UnregisterCUTImage(void),
   UnregisterDCMImage(void),
+  UnregisterDCRAWImage(void),
   UnregisterDCXImage(void),
   UnregisterDIBImage(void),
   UnregisterDPSImage(void),
